--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,12 @@ android {
             keyAlias = 'nslab123'
             keyPassword 'nslab123'
         }
+        release {
+            storeFile file('C:\\Users\\nsl\\nslab123.jks')
+            storePassword 'nslab123'
+            keyAlias = 'nslab123'
+            keyPassword 'nslab123'
+        }
     }
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -16,7 +22,7 @@ android {
         applicationId "inha.nslab.easytrack"
         minSdkVersion 15
         targetSdkVersion 29
-        versionCode 4
+        versionCode 5
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
