--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     signingConfigs {
@@ -19,8 +20,8 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "inha.nslab.easytrack"
-        minSdkVersion 15
+        applicationId "inha.nsl.easytrack"
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 7
         versionName "1.1"
@@ -68,7 +69,9 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.2'
 
     // Google Auth
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
 
     // Test
     testImplementation 'junit:junit:4.12'
