--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,24 +7,24 @@ apply plugin: 'com.google.gms.google-services'
 android {
     signingConfigs {
         debug {
-            storeFile file('C:\\Users\\nsl\\nslab123.jks')
+            storeFile file('../nslab123.jks')
             storePassword 'nslab123'
             keyAlias = 'nslab123'
             keyPassword 'nslab123'
         }
         release {
-            storeFile file('C:\\Users\\nsl\\nslab123.jks')
+            storeFile file('../nslab123.jks')
             storePassword 'nslab123'
             keyAlias = 'nslab123'
             keyPassword 'nslab123'
         }
     }
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 30
+    buildToolsVersion '30.0.1'
     defaultConfig {
         applicationId "inha.nsl.easytrack"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 6
         versionName "1.3"
         multiDexEnabled true
@@ -62,10 +62,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Default
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // GRPC
@@ -75,9 +75,9 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.2'
 
     // Google Auth
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
 
     // Test
     testImplementation 'junit:junit:4.12'
